# nextjs-fastapi

./: .env  README.md  index.html  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.json  vite.config.ts
api/: index.py
api/db/: models.py
app/: App.vue  main.ts
